--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     width: 100%;
     height: 100vh;
-    background-image: url(images/banana.jpg);
+    background-image: url(banana.jpg);
     background-position: center;
     background-size: cover;
     padding-left: 8%;
@@ -101,13 +101,13 @@ button{
     background-image: url(pic1.jpg);
 }
 .card2{
-    background-image: url(images/pic2.jpg);
+    background-image: url(pic2.jpg);
 }
 .card3{
-    background-image: url(images/pic3.jpg);
+    background-image: url(pic3.jpg);
 }
 .card4{
-    background-image: url(images/pic4.jpg);
+    background-image: url(pic4.jpg);
 }
 .card:hover{
     transform: translateY(-10px);
